@@ -1,8 +1,8 @@
-<!ENTITY day          "23">                   <!-- Always 2 digits -->
+<!ENTITY day          "24">                   <!-- Always 2 digits -->
 <!ENTITY month        "04">                   <!-- Always 2 digits -->
 <!ENTITY year         "2006">
 <!ENTITY version      "svn-&year;&month;&day;">
-<!ENTITY releasedate  "April &day;rd, &year;">
+<!ENTITY releasedate  "April &day;th, &year;">
 <!ENTITY pubdate      "&year;-&month;-&day;"> <!-- metadata req. by TLDP -->
 <!ENTITY blfs-version "svn">                  <!-- svn|[release #] -->
 <!ENTITY lfs-version  "development">          <!-- version|stable|testing|unstable|development] -->
@@ -34,7 +34,7 @@
 <!ENTITY lfs-perl-version             "5.8.8">
 <!-- End LFS versions -->
 
-<!ENTITY blfs-bootscripts-version     "20060415">
+<!ENTITY blfs-bootscripts-version     "20060423">
 <!ENTITY blfs-bootscripts-download    "&downloads-root;/blfs-bootscripts-&blfs-bootscripts-version;.tar.bz2">
 
 <!ENTITY blfs-wiki                    "http://wiki.linuxfromscratch.org/blfs/wiki">
@@ -324,7 +324,7 @@
 <!ENTITY courier-version              "0.47">
 <!ENTITY exim-version                 "4.52">
 <!ENTITY postfix-version              "2.2.8">
-<!ENTITY qpopper-version              "4.0.5">
+<!ENTITY qpopper-version              "4.0.9">
 <!ENTITY sendmail-version             "8.13.6">
 
 <!-- Chapter 23 -->
