@@ -40,6 +40,16 @@
     </listitem>
 
 -->
+    <listitem>
+      <para>April 24th, 2006</para>
+      <itemizedlist>
+        <listitem>
+          <para>[bdubbs] - Updated to qpopper-4.0.9.  Added standaone
+          instructions and a configuration file.  Added initialization
+          an script to the bootscripts and bootscripts Makefile.</para>
+        </listitem>
+      </itemizedlist>
+    </listitem>
 
     <listitem>
       <para>April 23rd, 2006</para>
