@@ -1,0 +1,69 @@
+#!/bin/sh
+# Description: The qpopper program provides Post Office Protocol services
+#              to users.
+#
+# Processname: popper
+# config: /etc/mail/qpopper.conf
+
+# Based on sysklogd script from LFS-3.1 and earlier.
+# Rewritten by Gerard Beekmans  - gerard@linuxfromscratch.org
+
+#$LastChangedBy$
+#$Date$
+
+. /etc/sysconfig/rc
+. $rc_functions
+
+CONFIG=/etc/mail/qpopper.conf
+#PORT=110
+
+[ -f /usr/sbin/popper ] || exit 0
+
+RETVAL=0
+prog="qpopper"
+
+
+start()
+{
+   if [ ! -f $CONFIG ]
+   then
+      echo "$prog not started.  $CONFIG missing!"
+      exit 1
+   fi
+   echo -n $"Starting $prog: "
+   loadproc /usr/sbin/popper $PORT -f $CONFIG
+   echo
+   RETVAL=$?
+   return $RETVAL
+}
+
+stop()
+{
+   echo -n $"Shutting down $prog: "
+   killproc popper
+   RETVAL=$?
+   echo
+   return $RETVAL
+}
+
+
+case "$1" in
+  start)
+    start
+        ;;
+  stop)
+    stop
+        ;;
+  restart)
+        stop
+        start
+        RETVAL=$?
+        ;;
+  *)
+        echo "Usage: /etc/init.d/qpopper{start|stop|restart}"
+        exit 1
+esac
+
+exit 0
+
+# End $rc_base/init.d/qpopper
